website overflow fixed

--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
 
-
+/* overflow scrollbar romove code*/
+::-webkit-scrollbar {
+    display: none;
+}
 
 *,
 ::after,
@@ -115,7 +118,7 @@ HEADER STYLE
 -------------------------------------------*/
 
 .header {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url(https://images.pexels.com/photos/2330137/pexels-photo-2330137.jpeg?auto=compress&cs=tinysrgb&w=1600);
     background-repeat: no-repeat;
@@ -284,7 +287,8 @@ MEDIA QUORIES 1200px
     .demo {
         width: 100%;
     }
-    .section-one-main{
+
+    .section-one-main {
         max-width: 30rem;
     }
 
